full-moon/tests/cfxlua_cases/fail/parser/bitwise_or_assignment_operator/source.lua
local num = 4
1 |= num
